# combinator

./: .example-env  .gitignore  Dockerfile  README.md  app.py  compose.dev.yml  compose.yml  process.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: cd.yml  publish.yml
frontend/: .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.frontend  components.json  deploy  eslint.config.js  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.mts  vite.config.ts
frontend/public/: index.html
frontend/src/: 404.tsx  AlwaysExpandCheckbox.tsx  App.tsx  BackToSearch.tsx  Banner.tsx  CardImage.tsx  CardStack.tsx  CollapsibleGroup.tsx  Combo.tsx  ComboContainer.tsx  ComboTable.tsx  ComboTabs.tsx  Combos.tsx  Deck.tsx  DeckInfo.tsx  Dropdown.tsx  Error.tsx  Field.tsx  Footer.tsx  Form.tsx  GoBack.tsx  GroupedCombos.tsx  HoverableCard.tsx  Hyperlink.tsx  IconText.tsx  Input.tsx  LayoutSelect.tsx  ListControls.tsx  Loading.tsx  MasonryLayout.tsx  MissingCardAccordion.tsx  MoxfieldDeadbanner.tsx  MoxfieldSearch.tsx  Nav.tsx  NiceButton.tsx  PasteDeckUrl.tsx  PasteList.tsx  RedirectDeck.tsx  ScrollToTop.tsx  Search.tsx  (+11 more)
frontend/src/CardFilter/: index.tsx
frontend/src/Dropdown/: Dropdown.tsx  index.sass
frontend/src/Paginate/: Paginate.tsx
frontend/src/UserDeck/: UserDecksContainer.tsx  index.tsx
frontend/src/UserDeckFilterForm/: index.tsx
frontend/src/app/: layout.tsx
frontend/src/atoms/: index.ts
server/: Dockerfile  Dockerfile.server  app.py  cache.sqlite  process.py  pyproject.toml  pyrightconfig.json  requirements.txt
server/app/: app.py  const.py  parse.py  process.py  user.py  util.py
server/app/models/: api.py  commanders_spellbook.py  moxfield.py
server/app/resources/: api.py  commander_spellbook.py
server/app/routes/: api.py
server/app/sources/archidekt/: api.py
server/app/sources/moxfield/: api.py
server/app/sources/mtggoldfish/: api.py
server/app/sources/scryfall/: api.py
worker/: package.json  pnpm-lock.yaml  wrangler.toml
worker/src/: index.ts
(+45 files in other folders)
