[tool.poetry]
name = "combinator"
version = "0.1.0"
description = ""
authors = ["James <4589250+Naught0@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
gunicorn = "^20.1.0"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.9.1"
backoff = "^2.2.1"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
