[project]
authors = [
    {name = "James", email = "4589250+Naught0@users.noreply.github.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "requests<3.0.0,>=2.27.1",
    "gunicorn>=20.1.0,<23.0.0",
    "bs4<1.0.0,>=0.0.1",
    "beautifulsoup4<5.0.0,>=4.10.0",
    "backoff<3.0.0,>=2.2.1",
    "fastapi<1.0.0,>=0.108.0",
    "uvicorn[standard]<1.0.0,>=0.25.0",
    "uvicorn-worker<1.0.0,>=0.2.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "pyrchidekt",
]
name = "combinator"
version = "0.1.6"
description = ""

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort<6.0.0,>=5.13.2",
    "requests-cache>=1.2.1",
]

[tool.uv.sources]
pyrchidekt = { git = "https://github.com/Naught0/pyrchidekt", branch = "format-errors" }
